refactor: 챌린저 검색 코드 가독성 개선